--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,10 @@
 <resources>
-    <string name="app_name">RentaTestApp</string>
+    <string name="app_name">TestApp</string>
     <string name="users">Users</string>
     <string name="user_avatar">User avatar</string>
     <string name="about_text">Тестовое задание для Rentateam</string>
     <string name="bad_internet_connection">Плохое интернет соедиение</string>
-    <string name="internet_connection_restored">Интернет соедиение восстановлено</string>
     <string name="update">Обновить</string>
-    <!-- TODO: Remove or change this placeholder text -->
+<!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
